# blindspot-bench

./: .gitignore  BENCHMARK.md  CITATION.cff  EXPERIMENT.md  README.md  main.tex  paper.md  pyproject.toml  refs.bib
docs/: INTEGRATION.md  SANDBOXING.md
examples/: 01_quickstart.py  02_swap_protocol.py  03_real_model.py  04_add_overseer.py
goodhart/: __init__.py
goodhart/analysis/: __init__.py  curve.py  report.py  rigor.py
goodhart/bridge/: __init__.py  channel.py  governance.py  payloads.py  schema.py
scripts/: analyze_detector.py  analyze_difficulty.py  analyze_harder.py  backtest_localization.py  blind_spot_decomposition.py  compare_gameable_aligned.py  detector_heldout.py  env_demo.py  env_real.py  fig0_overview.py  fig2_threshold.py  fig3_crossfamily.py  fig4_costly.py  fig5_architecture.py  fig6_localization.py  fig7_crossdomain.py  fig8_trajectory.py  fig_belief_model.py  fig_detector.py  greedy_control.py  localization_analysis.py  run_api_powered.py  run_api_probe.py  run_arch_gameable.py  run_campaign.py  run_costly.py  run_costly_sonnet.py  run_detector.py  run_difficulty.py  run_endogenous.py  run_experiment.py  run_fine_lambda.py  run_fixed_overseer.py  run_gemini_probe.py  run_harder.py  run_real_cell.py  run_scale.py  run_spine_demo.py  stats_summary.py
tests/: test_adapters.py  test_analysis.py  test_boundary_awareness.py  test_bridge.py  test_exporter.py  test_harder_world_validity.py  test_memory.py  test_overseer.py  test_pressure_gaming.py  test_rigor.py  test_runner.py  test_sandbox.py  test_spine.py  test_validity.py
(+35 files in other folders)
